# av-perception-trace

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: design.md  next_steps.md
scripts/: compare_traces.py  download_nuscenes.md  evaluate_factor.py  render_report.py  run_all.py  run_eval.py  run_infer.py  run_teacher.py  run_train_factors.py  run_udv_llm.py
src/eval/: __init__.py  error_taxonomy.py  eval_runner.py  metrics.py
src/models/: __init__.py  factor_model.py  infer.py  train.py
src/perception/: __init__.py  detectors.py  features.py  geometry.py  uncertainty.py
src/teacher/: __init__.py  rules.py  teacher_runner.py
src/trace_protocol/: __init__.py  render_explanation.py  trace_builder.py  trace_store.py  trace_types.py  trace_validator.py
src/udv/: __init__.py  udv_engine.py  udv_prompt.py  udv_schema.py  udv_verify.py
tests/: test_rules.py  test_trace_schema.py  test_udv_regression.py  test_udv_schema.py
