[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "av-perception-trace"
version = "0.1.0"
description = "Explainable perception-to-decision pipeline for AV scenarios."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "nuscenes-devkit>=1.1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}
